fixing 7.x compilation